Verify open types in SETs and SEQUENCEs